--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.4",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.3.24",
+    "miragejs": "^0.2.0-alpha.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
