--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.4",
+    "axios-cache-interceptor": "^1.7.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.3.24",
     "miragejs": "^0.2.0-alpha.3",
