adjusting GH Actions flow to include .env file #3

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,12 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Make envfile
+      uses: SpicyPizza/create-envfile@v2.0
+      with:
+        envkey_REACT_APP_WC_CONSUMER_KEY: ${{ secrets.REACT_APP_WC_CONSUMER_KEY }}
+        envkey_REACT_APP_WC_CONSUMER_SECRET: ${{ secrets.REACT_APP_WC_CONSUMER_SECRET }}
+
     - name: Use latest Node.js 
       uses: actions/setup-node@v4
       with:
@@ -30,12 +36,9 @@ jobs:
       env:
         CI: false
 
-    - name: Make envfile
-      uses: SpicyPizza/create-envfile@v2.0
-      with:
-        envkey_REACT_APP_WC_CONSUMER_KEY: ${{ secrets.REACT_APP_WC_CONSUMER_KEY }}
-        envkey_REACT_APP_WC_CONSUMER_SECRET: ${{ secrets.REACT_APP_WC_CONSUMER_SECRET }}
-        directory: "build"
+    - name: Move .env file into build folder
+      run: |
+        mv "${GITHUB_WORKSPACE}/.env" "${GITHUB_WORKSPACE}/build/.env"
 
     - name: Upload by FTP
       uses: sand4rt/ftp-deployer@v1.8
