--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,5 +60,5 @@ jobs:
         local_folder: 'build' # optional, local path, default is: dist
         cleanup: true # optional, remove existing files inside FTP remote folder
         passive: true # optional
-        include: '["*.env"]' # optional, e.g. '['dist']'
+        include: '["*.*"]' # optional, e.g. '['dist']'
         exclude: '[]' # optional, e.g. '['node_modules/**', '.git/**', '*.env']'
